feat: denied habilitation on interrogation data access when validated… (#304)
* feat: denied habilitation on interrogation data access when validated in paper environment

- refactoring of the current habilitation mechanism (v2)
- adapt event types for the interrogation paper data edit permission
- deny web habilitation on interrogation data read/write permission when interrogation is validated in paper environment
- add valpap as validated event
- rename READ_SUPPORT to SUPPORT_READ

* test: add coveage for new check habilitation controller

* fix: add RECUPAP & PARTIELPAP as received status